chore: add abilities migration and editor component
